<resources>
    <string name="app_name">Lateral</string>
    <string name="feeds">Feeds</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">Full Name</string>
    <string name="username">username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="notifications">Notifications</string>
    <string name="get_help">Get Help</string>
    <string name="report_problem">Report Problem</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="logout">Logout</string>
    <string name="save_changes">Save changes</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="next">Next</string>
    <string name="create_post">Create Post</string>
    <string name="share">Share</string>
    <string name="back_icon">Back Icon</string>
    <string name="start_writing">Start Writing</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_your_phone_number_below_to_proceed">Please enter your phone number below to proceed</string>
    <string name="your_phone_number_here">Your phone number here</string>
    <string name="register">Register</string>
    <string name="wait_for_automatic_registration">Wait for automatic registration</string>
    <string name="messages">Messages</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="your_user_name">Your User Name</string>
    <string name="i_m_looking_for_an_escort">I\'m looking for an escort</string>
    <string name="i_want_to_be_an_escort">I want to be an escort</string>
    <string name="my_prices">My Prices</string>
    <string name="what_i_do">What I Do</string>
    <string name="save">Save</string>
    <string name="write_something">Write something</string>
    <string name="a_short_description_of_yourself">A short description of yourself</string>
    <string name="photos_prices_price_per_photo">Photos prices (price per photo)</string>
    <string name="videos_prices_price_per_video">Videos prices (price per video)</string>
    <string name="video_calls_prices_price_per_hour">Video calls prices (price per hour)</string>
    <string name="outcall_prices">Outcall prices \n(Price per shot or price per hour)</string>
    <string name="incall_prices">Incall prices \n(Price per shot or price per hour)</string>
    <string name="do_you_offer_incalls">Do you offer incalls and/or outcalls?</string>
    <string name="do_you_sell_photos_and_or_videos">Do you sell photos and/or videos?</string>
    <string name="do_you_offer_video_calls">Do you offer video calls?</string>
    <string name="make_this_photo_free_to_view">Make this photo free to view</string>
    <string name="here_goes_the_post_text">Here goes the post text</string>
    <string name="reply">Reply</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="delete_for_all">Delete for all</string>
    <string name="this_name_will_be_used_to_create_your_avatar_a_fake_you_to_help_you_use_the_app_anonymously_the_username_will_be_used_to_create_a_lynn_app_email_to_use_within_the_app_n_nyour_security_is_our_concer">This name will be used to create your avatar. A fake you to help you use the app anonymously the username will be used to create a lynn app email to use within the app\n\nYOUR SECURITY IS OUR CONCER</string>
    <string name="choose_a_username">Choose a username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schools">Schools</string>
</resources>
